--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
+    "konva": "^10.2.0",
     "next": "16.1.6",
     "openai": "^6.21.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-konva": "^19.2.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
