--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "openai": "^6.21.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-konva": "^19.2.2"
+    "react-konva": "^19.2.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
