--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@remotion/bundler": "^4.0.421",
     "@remotion/cli": "^4.0.421",
     "@remotion/google-fonts": "^4.0.421",
     "@remotion/player": "^4.0.421",
